samples/_failures_safe/1761042718_cbe6a1_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_58aee59d.c: In function ‘main’:
./samples/SAFE/__tmp_58aee59d.c:147:9: error: expected declaration or statement at end of input
  147 |         printf("No valid log entries found or file is empty.\n");
      |         ^~~~~~
./samples/SAFE/__tmp_58aee59d.c:147:9: error: expected declaration or statement at end of input
